# RabbitMQ-Health-API

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
app/: config.py  main.py  metrics.py  rabbitmq.py  utils.py
app/core/: __init__.py  config.py  logger.py
app/routes/: health.py  metrics.py  status.py
