[project]
name = "rabbitmq-health"
version = "0.1.0"
description = "Лёгкий HTTP-сервис для мониторинга RabbitMQ и состояния виртуальной машины"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
